feat: 娣诲姞缈昏瘧瀛楀箷鍔熻兘 - 鏀寔澶氳瑷€妫€娴嬪拰缈昏瘧瀛楀箷鏄剧ず

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -835,7 +835,8 @@
     }
   },
   "subtitle": {
-    "title": "Live Subtitle"
+    "title": "Live Subtitle",
+    "enable": "Enable Subtitles"
   },
   "viewer": {
     "title": "Viewer - Project N.E.K.O."
