users have to confirm before set l

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -674,6 +674,7 @@
     "saveFailed": "Save failed",
     "saveError": "An error occurred while saving: {{error}}",
     "fillProfileNameFirst": "Please fill in the catgirl profile name first, then set the Live2D model",
+    "createCharacterFirst": "Please click the \"Confirm New Character\" button to create the character first, then set the Live2D model",
     "allowPopups": "Please allow popups!",
     "enterNewProfileName": "Please enter the new catgirl profile name",
     "renameCatgirlTitle": "Rename Catgirl",
