--- a/static/locales/zh-CN.json
+++ b/static/locales/zh-CN.json
@@ -674,6 +674,7 @@
     "saveFailed": "保存失败",
     "saveError": "保存时发生错误: {{error}}",
     "fillProfileNameFirst": "请先填写猫娘档案名，然后再设置Live2D模型",
+    "createCharacterFirst": "请先点击\"确认新猫娘\"按钮创建角色，然后再设置Live2D模型",
     "allowPopups": "请允许弹窗！",
     "enterNewProfileName": "请输入新的猫娘档案名",
     "renameCatgirlTitle": "重命名猫娘",
