Add local cosyvoice (#192)
* feat: integrate cosyvoice source code

* feat: integrate local cosyvoice websocket client

* 修改了requirements的错误,更改了model_server的重复调用问题，更改tts_client的调用端口方式。

* 修正了逻辑错误重复

* 修正了初始化信号未定义的问题

* 修正了初始化信号未定义的问题

* 修正了了调用逻辑的问题

* 修正了了调用逻辑的问题

* 修正了local_worker逻辑上的bug

* 修复了重连机制的问题

* 修正了若干信号处理的bug

* 修正了ws.close的调用错误以及一些

* 修正了 ws.closed在本地不生效的问题,重写了重连逻辑. 修正了传输语音流的逻辑,不再是单字传输,而是合并同时输出

* 删除了若干测试残留

* 修正了函数和异常处理规范问题

* 修正了若干测试函数残留

* 修正了函数和异常处理规范问题

* 修复了连接没有更新 ws_conn的问题，增加了捕获 ensure_connection 的返回值

* 修改了model_server的输入逻辑，使用Generator 以更符合输入,同期修改了client的相关内容逻辑

* Fixed some bug

* Fixed some signal bugs

* 修复了清理逻辑的一些bug

* 修复了一些bug

* 修复了一些bug

* 修复了一些bug

* Refactor tts client. Relink cosyvoice to custom repo. Change api key settings to enable custom tts by default.

* Fix custom api routing logic and tts ending logic. Add unit test.

* Pin CosyVoice submodule to wehos/CosyVoice-v3@f0364b0

---------

Co-authored-by: Hongzhi Wen <wenguanjung@aliyun.com>

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -450,6 +450,9 @@
     "visionModelApiKeyPlaceholder": "Please enter Vision Model API Key",
     "omniModelApiKeyPlaceholder": "Please enter Omni Model API Key",
     "ttsModelApiKeyPlaceholder": "Please enter TTS Model API Key",
+    "ttsVoiceId": "Voice ID",
+    "ttsVoiceIdHint": "(Optional, fallback voice when character has none)",
+    "ttsVoiceIdPlaceholder": "e.g., 中文女, alloy",
     "omniApiUrlNote": "(Must be a WebSocket address starting with ws:// or wss://)",
     "omniApiUrlPlaceholder": "e.g., wss://dashscope.aliyuncs.com/api-ws/v1/realtime",
     "pleaseEnterApiKeyError": "Please enter API Key",
@@ -458,7 +461,7 @@
     "currentApiKey": "📋 Current API Key: {{key}}",
     "currentNoApiKey": "📋 No API Key Currently Set",
     "customApiEnabled": "💡 Configuration Status:",
-    "customApiEnabledDesc": "Custom API Enabled: Core API and Assist API have been disabled",
+    "customApiEnabledDesc": "Custom API Enabled: Core API and Assist API have been overwritten",
     "customApiEnabledNote": "Please configure APIs for each functional module in the Custom API Configuration below",
     "customApiEnabledHint": "(Custom API Enabled)",
     "customApiConfig": "Custom API Configuration",
