--- a/static/locales/zh-CN.json
+++ b/static/locales/zh-CN.json
@@ -450,6 +450,9 @@
     "visionModelApiKeyPlaceholder": "请输入视觉模型的API Key",
     "omniModelApiKeyPlaceholder": "请输入全模态模型的API Key",
     "ttsModelApiKeyPlaceholder": "请输入TTS模型的API Key",
+    "ttsVoiceId": "Voice ID",
+    "ttsVoiceIdHint": "（可选，角色未设置时的回退音色）",
+    "ttsVoiceIdPlaceholder": "如：中文女、alloy",
     "omniApiUrlNote": "（必须是WebSocket地址，以ws://或wss://开头）",
     "omniApiUrlPlaceholder": "如：wss://dashscope.aliyuncs.com/api-ws/v1/realtime",
     "pleaseEnterApiKeyError": "请输入API Key",
@@ -458,7 +461,7 @@
     "currentApiKey": "📋 当前API Key: {{key}}",
     "currentNoApiKey": "📋 当前暂未设置API Key",
     "customApiEnabled": "💡 配置状态：",
-    "customApiEnabledDesc": "自定义API已启用：核心API和辅助API已被禁用",
+    "customApiEnabledDesc": "自定义API已启用：核心API和辅助API已被覆盖",
     "customApiEnabledNote": "请在下方的自定义API配置中设置各功能模块的API",
     "customApiEnabledHint": "（自定义API已启用）",
     "customApiConfig": "自定义API配置",
